[gd_scene load_steps=20 format=3 uid="uid://bptns0se84edc"]

[ext_resource type="PackedScene" uid="uid://byaqaa7wu02y5" path="res://gameplay/ant_controller.tscn" id="1_se8hi"]
[ext_resource type="PackedScene" uid="uid://bkr2bq1l3qpe8" path="res://gameplay/cookie.tscn" id="2_bkenh"]
[ext_resource type="Script" path="res://code/nest_controller.gd" id="3_jvaob"]
[ext_resource type="FontFile" uid="uid://b0n86ptigjy55" path="res://art/yikes.ttf" id="4_8tcoj"]
[ext_resource type="AudioStream" uid="uid://cost7whhqdfiu" path="res://audio/music_introv2.wav" id="4_hpvcr"]
[ext_resource type="AudioStream" uid="uid://c2y1g53nrvm3y" path="res://audio/music_loop1v2.wav" id="4_kqcom"]
[ext_resource type="PackedScene" uid="uid://d2pctqtfh0i32" path="res://art/tele/tele.glb" id="5_lmhp7"]
[ext_resource type="PackedScene" uid="uid://d1gtanmqx6wcf" path="res://art/assets/pruebamapa.glb" id="6_3ykg3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dki35"]

[sub_resource type="BoxMesh" id="BoxMesh_1w4ss"]

[sub_resource type="NavigationMesh" id="NavigationMesh_7l038"]
vertices = PackedVector3Array(-17.2099, 0.34818, -18.5891, -17.2099, 0.34818, 19.1609, 18.5401, 0.34818, 19.1609, 18.5401, 0.34818, -18.5891)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2kiuc"]
albedo_color = Color(0.369107, 0.369107, 0.369107, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_l1pkv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b2bj7"]
size = Vector3(2.00098, 0.0156555, 1.8938)

[sub_resource type="SphereMesh" id="SphereMesh_vsupr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_djw4g"]
albedo_color = Color(1, 0.243137, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kbaf2"]
albedo_color = Color(0.0997663, 0, 0.724283, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0360"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_qh5j0"]
clip_count = 2
clip_0/name = &"Music Introv 2"
clip_0/stream = ExtResource("4_hpvcr")
clip_0/auto_advance = 1
clip_0/next_clip = 1
clip_1/name = &"Music Loop 1v 2"
clip_1/stream = ExtResource("4_kqcom")
clip_1/auto_advance = 0

[node name="main_scene" type="Node3D"]

[node name="DEBUG_lighting" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="DEBUG_lighting"]
transform = Transform3D(1, 0, 0, 0, 0.229132, 0.973395, 0, -0.973395, 0.229132, 0, 0, 0)
shadow_enabled = true

[node name="DEBUG_simple_map" type="Node3D" parent="."]

[node name="caja" type="RigidBody3D" parent="DEBUG_simple_map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.24229, 1.33586, 2.63189)
mass = 0.1

[node name="CollisionShape3D" type="CollisionShape3D" parent="DEBUG_simple_map/caja"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("BoxShape3D_dki35")

[node name="MeshInstance3D" type="MeshInstance3D" parent="DEBUG_simple_map/caja"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
mesh = SubResource("BoxMesh_1w4ss")
skeleton = NodePath("../../../gameplay")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="DEBUG_simple_map"]
navigation_mesh = SubResource("NavigationMesh_7l038")

[node name="plane" type="MeshInstance3D" parent="DEBUG_simple_map/NavigationRegion3D"]
transform = Transform3D(18.3754, 0, 0, 0, 5, 0, 0, 0, 19.342, 0.665486, 0.153467, 0.25289)
material_override = SubResource("StandardMaterial3D_2kiuc")
mesh = SubResource("PlaneMesh_l1pkv")
skeleton = NodePath("../../..")

[node name="RigidBody3D" type="RigidBody3D" parent="DEBUG_simple_map/NavigationRegion3D/plane"]
lock_rotation = true
freeze = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="DEBUG_simple_map/NavigationRegion3D/plane/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00244141, -0.00776627, 0.0372314)
shape = SubResource("BoxShape3D_b2bj7")

[node name="ant_controller" parent="." instance=ExtResource("1_se8hi")]

[node name="gameplay" type="Node3D" parent="."]

[node name="paradise_pool" type="Node3D" parent="gameplay"]

[node name="tele" type="MeshInstance3D" parent="gameplay/paradise_pool"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.08631, 0.341385, 0.357073)
mesh = SubResource("SphereMesh_vsupr")
surface_material_override/0 = SubResource("StandardMaterial3D_djw4g")

[node name="cookie_pool" type="Node3D" parent="gameplay"]

[node name="cookie" parent="gameplay/cookie_pool" instance=ExtResource("2_bkenh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57379, 0.476701, 1.84799)

[node name="cookie2" parent="gameplay/cookie_pool" instance=ExtResource("2_bkenh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.564326, 0.891871, 0.78743)

[node name="cookie3" parent="gameplay/cookie_pool" instance=ExtResource("2_bkenh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.00723, 0.891871, 0.131822)

[node name="nest_pool" type="Node3D" parent="gameplay"]

[node name="nest" type="Node3D" parent="gameplay/nest_pool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.82026, 0.56637, 2.99017)
script = ExtResource("3_jvaob")

[node name="model" type="MeshInstance3D" parent="gameplay/nest_pool/nest"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh = SubResource("SphereMesh_vsupr")
surface_material_override/0 = SubResource("StandardMaterial3D_kbaf2")

[node name="ui_controller" type="Panel" parent="."]
offset_right = 204.0
offset_bottom = 137.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_h0360")

[node name="ui_food" type="Label" parent="ui_controller"]
layout_mode = 0
offset_left = 20.0
offset_top = 14.0
offset_right = 270.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(0.815686, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.996078, 0.654902, 0.0705882, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("4_8tcoj")
theme_override_font_sizes/font_size = 50
text = "Galletas:
0"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.51297, 4.29674, -9.1741)
stream = SubResource("AudioStreamInteractive_qh5j0")
max_db = -3.0
autoplay = true
max_distance = 50.0
emission_angle_enabled = true

[node name="tele" parent="." instance=ExtResource("5_lmhp7")]
transform = Transform3D(0.0750195, 0, -0.0408918, 0, 0.0854404, 0, 0.0408918, 0, 0.0750195, -3.37427, 4.00554, 0.215146)

[node name="pruebamapa" parent="." instance=ExtResource("6_3ykg3")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.176453, 0.203071, -4.03817)
